# routing/user.js
@@ -22,13 +22,16 @@ router.route('/:id')
 router.route('/:id/home')
 .post(userController.userCollectionHouse);
 //post image to home by id
-router.route('/:id/home/:home_id/image')
-.post(upload.single('image'), userController.addImage)
+router.route('/home/:home_id/image')
+.post(upload.single('image'), userController.addImageHouse)
 .get(userController.getImage);
 //post office to user by id
 router.route('/:id/office')
 .post(userController.userCollectionOffice);
-
+//post image to office by id
+router.route('/office/:office_id/image')
+.post(upload.single('image'), userController.addImageOffice)
+.get(userController.getImage);
 
 // export api routes
 module.exports = router;
